# ChunkHound-dotnet

./: .chunkhound.json  .gitignore  CodingRules.md  chunkhound-dotnet.sln  msbuild.binlog  run-tests-with-python.ps1
.github/workflows/: ci.yml
.roo/: mcp.json
ChunkHound/: ChunkHound.csproj  Program.cs  appsettings.json
ChunkHound.Tests/: ChunkHound.Tests.csproj  Program.cs  ProgramTests.cs  UnitTest1.cs  test.runsettings
ChunkHound.Tests/Benchmarks/: BenchmarkHelper.cs  IndexingBenchmarks.cs
ChunkHound.Tests/Helpers/: PythonTestHelper.cs  TestDataGenerator.cs
ChunkHound.Tests/Integration/: DatabaseIntegrationTests.cs  TestLanceDBIntegration.cs
ChunkHound.Tests/Parsers/: CSharpParserTests.cs  CodeChunkParserTests.cs  MarkdownParserTests.cs  ParserFactoryTests.cs  RapidYamlParserTests.cs  RecursiveChunkSplitterTests.cs  UniversalTextParserTests.cs  VueChunkParserTests.cs  YamlTemplateSanitizerTests.cs
ChunkHound.Tests/Providers/: FakeConstantEmbeddingProviderTests.cs  FakeDatabaseProviderTests.cs  LanceDBProviderTests.cs
ChunkHound.Tests/Services/: BatchProcessorTests.cs  ChunkCacheServiceTests.cs  DatabaseProviderTests.cs  EmbeddingErrorClassifierTests.cs  EmbeddingProviderTests.cs  EmbeddingServiceTests.cs  IndexingCoordinatorTests.cs  LanguageConfigProviderTests.cs  UniversalParserTests.cs
ChunkHound/Core/: BatchProcessingResult.cs  (+20 more)
plans/: csharp-indexing-implementation-plan.md  lancedb-test-hang-analysis.md  parsers-impl-plan.md  single-python-init.md
python-deps/: README.md  benchmark_parsers.py  pyproject.toml
specs/: indexing-flow.md
(+64 files in other folders)
