[project]
name = "chunkhound-python-deps"
version = "0.1.0"
description = "Python dependencies for ChunkHound LanceDB integration"
requires-python = ">=3.8"
dependencies = [
    "lancedb",
    "pyarrow",
    "numpy"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"